--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1{
+    /* Se aplican estilos a los h1 mediante
+    la directiva apply de tailwind.
+    Cabe recalcar que en la hoja de estilos no puede
+    haber breakpoints */
+    @apply font-sans text-6xl text-3xl font-bold;
+}
+
+p{
+    @apply font-serif leading-normal mb-6 -ml-3;
+}
+
+ul{
+    @apply font-mono text-sm italic;
+}
